--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.22.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "firebase": "^9.22.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
@@ -18,6 +18,6 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "vite": "^4.3.8"
+    "vite": "^4.5.9"
   }
 }
